--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
-  "name": "PawPlayer",
+  "name": "paw-player",
   "version": "0.0.1",
   "description": ".",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "NODE_ENV=development webpack serve --config ./client/webpack.config.js",
+    "build": "rm -rf ./build && NODE_ENV=production webpack --config ./client/webpack.config.js",
+    "start:electron-dev": "NODE_ENV=development electron .",
+    "start:electron-dist": "NODE_ENV=production electron .",
+    "make": "electron-forge make"
   },
   "repository": ".",
   "author": "alexander0ezhov",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^32.1.0"
+    "@electron-forge/cli": "^7.4.0",
+    "@types/node-sass": "^4.11.7",
+    "@types/react": "^18.3.6",
+    "@types/react-dom": "^18.3.0",
+    "electron": "^32.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "node-sass": "^9.0.0",
+    "prettier": "^3.3.3",
+    "sass-loader": "^16.0.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
