added some scripts + forge

--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "description": ".",
   "main": "main.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack serve --config ./client/webpack.config.js",
-    "build": "rm -rf ./build && NODE_ENV=production webpack --config ./client/webpack.config.js",
+    "start:client": "NODE_ENV=development webpack serve --config ./client/webpack.config.js",
+    "build:client": "rm -rf ./build && NODE_ENV=production webpack --config ./client/webpack.config.js",
     "start:electron-dev": "NODE_ENV=development electron .",
     "start:electron-dist": "NODE_ENV=production electron .",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "start": "electron-forge start",
+    "package": "electron-forge package"
   },
   "repository": ".",
   "author": "alexander0ezhov",
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
     "@types/node-sass": "^4.11.7",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
@@ -31,6 +40,7 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
