update webpack config for using scss/css modules, added aliases and some more loaders

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
+    "paths" : {
+      "@root/*": ["./*"],
+      "@Components/*": ["./Components/*"],
+      "@themes/*": ["./themes/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
