--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@types/node-sass": "^4.11.7",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
+    "css-loader": "^7.1.2",
     "electron": "^32.1.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "node-sass": "^9.0.0",
     "prettier": "^3.3.3",
     "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
