--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^3.3.3",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
+    "@svgr/webpack": "^8.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
