--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": ".",
   "main": "main.js",
   "scripts": {
-    "start:client": "NODE_ENV=development webpack serve --config ./client/webpack.config.js",
-    "build:client": "rm -rf ./build && NODE_ENV=production webpack --config ./client/webpack.config.js",
-    "start:electron-dev": "NODE_ENV=development electron .",
-    "start:electron-dist": "NODE_ENV=production electron .",
+    "start:client": "cross-env NODE_ENV=development webpack serve --config ./client/webpack.config.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./client/webpack.config.js",
+    "start:electron-dev": "cross-env NODE_ENV=development electron .",
+    "start:electron-dist": "cross-env NODE_ENV=production electron .",
     "make": "electron-forge make",
     "start": "electron-forge start",
     "package": "electron-forge package"
@@ -24,9 +24,11 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node-sass": "^4.11.7",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "electron": "^32.1.0",
     "file-loader": "^6.2.0",
@@ -36,7 +38,6 @@
     "prettier": "^3.3.3",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
-    "@svgr/webpack": "^8.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
