--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,6 +6,7 @@
       "@Components/*": ["./Components/*"],
       "@themes/*": ["./themes/*"],
       "@assets/*": ["./assets/*"],
+      "@hooks/*": ["./hooks/*"],
     },
     "target": "es5",
     "lib": [
