--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,7 @@
       "@themes/*": ["./themes/*"],
       "@assets/*": ["./assets/*"],
       "@hooks/*": ["./hooks/*"],
+      "@modules/*": ["./modules/*"],
     },
     "target": "es5",
     "lib": [
