--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "paw-player",
   "version": "0.0.1",
   "description": ".",
-  "main": "main.js",
+  "main": "node/dist/main.js",
   "scripts": {
     "start:client": "cross-env NODE_ENV=development webpack serve --config ./client/webpack.config.js",
     "build:client": "cross-env NODE_ENV=production webpack --config ./client/webpack.config.js",
-    "start:electron-dev": "cross-env NODE_ENV=development electron .",
+    "build:node": "tsc",
+    "start:electron-dev": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"electron .\"",
     "start:electron-dist": "cross-env NODE_ENV=production electron .",
     "make": "electron-forge make",
     "start": "electron-forge start",
@@ -25,9 +26,11 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/node": "^22.7.4",
     "@types/node-sass": "^4.11.7",
     "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
+    "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "electron": "^32.1.0",
