--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "classnames": "^2.5.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.0-rc.2"
   }
 }
