--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,6 +9,7 @@
       "@assets/*": ["./assets/*"],
       "@hooks/*": ["./hooks/*"],
       "@modules/*": ["./modules/*"],
+      "@pages/*": ["./pages/*"],
       "@utils/*": ["./utils/*"],
     },
     "target": "es5",
