--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "electron-squirrel-startup": "^1.0.1",
+    "music-metadata": "^10.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^5.0.0-rc.2"
