--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
-    "node-sass": "^9.0.0",
     "prettier": "^3.3.3",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
@@ -53,6 +52,7 @@
     "music-metadata": "^10.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.81.0",
     "zustand": "^5.0.0-rc.2"
   }
 }
